HSTTWO-39: Some suggestions from FindBugs
svn path=/experimental/hst2/trunk/; revision=14081